--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -7,7 +7,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- <link rel="icon" href="favicon.ico"> -->
-        <title>Django + Vue CLI</title>
+        <title>POT</title>
         {% endblock %}
     </head>
     <body {% block body_tag_attributes %}{% endblock %}>
