--- a/frontend/src/styles/_shared.scss
+++ b/frontend/src/styles/_shared.scss
@@ -3,3 +3,5 @@ $color--gray: #1F2833;
 $color--light-gray: #C5C6C7;
 $color--light-blue: #66FCF1;
 $color--dark-blue: #4455AA;
+
+$font--normal: 16px;
