--- a/frontend/src/styles/_utils.scss
+++ b/frontend/src/styles/_utils.scss
@@ -1,3 +1,11 @@
 .mt-40{
   margin-top: 40px!important;
 }
+
+.mt-20{
+  margin-top: 20px!important;
+}
+
+.mb-20{
+  margin-bottom: 20px!important;
+}
