--- a/backend/templates/base-vue.html
+++ b/backend/templates/base-vue.html
@@ -1,1 +1,14 @@
-{% extends "base.html" %} {% block html %}<!doctype html><html {% block html_tag_attributes %}{{ block.super }}{% endblock %}><head>{% block head %}{{ block.super }}{% endblock %}<link href="/static/dist/css/app.5293e793.css" rel="preload" as="style"><link href="/static/dist/css/chunk-vendors.ce1e57cf.css" rel="preload" as="style"><link href="/static/dist/js/app.246f1975.js" rel="preload" as="script"><link href="/static/dist/js/chunk-vendors.3ec665b2.js" rel="preload" as="script"><link href="/static/dist/css/chunk-vendors.ce1e57cf.css" rel="stylesheet"><link href="/static/dist/css/app.5293e793.css" rel="stylesheet"></head><body {% block body_tag_attributes %}{{ block.super }}{% endblock %}>{% block body %}{{ block.super }}{% endblock %}<script src="/static/dist/js/chunk-vendors.3ec665b2.js"></script><script src="/static/dist/js/app.246f1975.js"></script></body></html>{% endblock %}
+{% extends "base.html" %}
+{% block html %}
+<!doctype html>
+<html {% block html_tag_attributes %}{{ block.super }}{% endblock %}>
+    <head>
+        {% block head %}{{ block.super }}{% endblock %}
+        <!-- html-webpack-inject will inject head assets below -->
+    <link href="http://127.0.0.1:8080/js/app.js" rel="preload" as="script"><link href="http://127.0.0.1:8080/js/chunk-vendors.js" rel="preload" as="script"></head>
+    <body {% block body_tag_attributes %}{{ block.super }}{% endblock %}>
+        {% block body %}{{ block.super }}{% endblock %}
+        <!-- html-webpack-inject will inject body assets below -->
+    <script type="text/javascript" src="http://127.0.0.1:8080/js/chunk-vendors.js"></script><script type="text/javascript" src="http://127.0.0.1:8080/js/app.js"></script></body>
+</html>
+{% endblock %}
