--- a/frontend/src/styles/_entry.scss
+++ b/frontend/src/styles/_entry.scss
@@ -5,3 +5,5 @@
 // components
 @import "components/homepage";
 @import "components/planTile";
+@import "components/login";
+@import "components/forms";
