--- a/frontend/src/styles/components/_planTile.scss
+++ b/frontend/src/styles/components/_planTile.scss
@@ -1,5 +1,5 @@
 .planTile__container {
-  border: $color--light-blue solid 4px;
+  border: $pot--border;
   width: 80%;
   height: 100px;
   margin-right: auto;
