--- a/frontend/src/styles/_shared.scss
+++ b/frontend/src/styles/_shared.scss
@@ -5,3 +5,6 @@ $color--light-blue: #66FCF1;
 $color--dark-blue: #4455AA;
 
 $font--normal: 16px;
+$font--large:36px;
+
+$pot--border: $color--light-blue solid 4px;
