--- a/frontend/src/styles/components/_homepage.scss
+++ b/frontend/src/styles/components/_homepage.scss
@@ -4,3 +4,9 @@
   font-weight: bold;
   color: $color--light-blue;
 }
+
+.homepage__plusIcon{
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+}
