--- a/frontend/src/styles/_shared.scss
+++ b/frontend/src/styles/_shared.scss
@@ -6,5 +6,6 @@ $color--dark-blue: #4455AA;
 
 $font--normal: 16px;
 $font--large:36px;
+$font--xlarge:48px;
 
 $pot--border: $color--light-blue solid 4px;
