--- a/frontend/src/styles/components/_planTile.scss
+++ b/frontend/src/styles/components/_planTile.scss
@@ -6,7 +6,16 @@
   margin-left: auto;
   margin-bottom: 25px;
 
-  .planTile__innerContainer {
+  .planTile__menuSwitch-fade-in, .planTile__menuSwitch-fade-out{
+    &-enter-active {
+    transition: all 1s;
+  }
+    &-enter-from {
+    opacity: 0;
+  }
+  }
+
+  .planTile__innerItemsContainer {
     position: relative;
     padding: 5px;
     height: 100%;
@@ -15,18 +24,35 @@
       color: $color--light-blue;
       font-size: $font--normal;
     }
-    .planTile__trainingSnippet{
+
+    .planTile__trainingSnippet {
       color: $color--light-gray;
       font-size: $font--normal;
     }
-    .planTile__icon-menu{
+
+    .planTile__icon-menu {
       position: absolute;
       top: 5px;
       right: 5px;
     }
-    .planTile__icon-add{
+
+    .planTile__icon-add {
       position: absolute;
       bottom: 5px;
+      right: 5px;
+    }
+  }
+
+  .planTile__innerMenuContainer {
+    position: relative;
+    //padding: 5px;
+    height: 100%;
+    width: 100%;
+    background-color: $color--black;
+
+    .planTile__icon-menu {
+      position: absolute;
+      top: 5px;
       right: 5px;
     }
   }
