--- a/frontend/src/styles/components/_planDetail.scss
+++ b/frontend/src/styles/components/_planDetail.scss
@@ -19,14 +19,26 @@
 
       .trainingTile__header {
         border-bottom: $pot--border;
+        height: 50px;
         color: $color--light-blue;
         text-align: center;
         font-size: 20px;
+        position: relative;
+        h3{
+          padding-top: 6px;
+        }
+        .trainingTile__menuIcon {
+          position: absolute;
+          right: 5px;
+          top: 12px;
+        }
       }
 
       .trainingTile__body {
         table {
           margin-bottom: 10px;
+          table-layout: fixed;
+          width: 100%;
 
           thead {
             tr {
@@ -34,7 +46,6 @@
 
               th {
                 padding-left: 15px;
-                width: 25%;
                 text-align: center;
               }
 
@@ -46,17 +57,24 @@
 
           tbody {
             .trainingTile__item {
+              position: relative;
               border-top: 1px solid $color--light-gray;
+              height: 50px;
               td {
                 padding-left: 15px;
                 color: $color--light-gray;
                 line-height: 30px;
+                hyphens:auto;
 
               }
 
               :nth-child(2), :nth-child(3) {
                 text-align: center;
               }
+            }
+            .trainingTile__addIcon{
+              float: right;
+              padding-right: 5px;
             }
           }
 
@@ -65,5 +83,9 @@
       }
     }
   }
-
+.planDetail__settingIcon{
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+}
 }
