--- a/frontend/src/styles/_utils.scss
+++ b/frontend/src/styles/_utils.scss
@@ -5,7 +5,19 @@
 .mt-20{
   margin-top: 20px!important;
 }
+.mt-05{
+  margin-top:5px;
+}
 
 .mb-20{
   margin-bottom: 20px!important;
+}
+
+.mb-05 {
+  margin-bottom: 5px !important;
+}
+
+.px-10 {
+  padding-right: 11px;
+  padding-left:10px
 }
